data/all_generated_tests/raw_wast_tests/block_EdgeCaseFailuresinbr_table_69.wast
;; 10. **Test with Shared Operand Stack across Nested Blocks**:    - Shared operand results across multiple nested blocks each containing `br_table` instructions targeting different block contexts.    - Checks detailed adherence to operand stack manipulations when `br_table` instructions operate within nested shared operand contexts.    - Edge Case: Wizard_engine's inline state operations might fail in maintaining a consistent stack state across multiple nested block transitions.  These tests are designed to expose differences in handling `br_table` edge cases in WebAssembly and wizard_engine due to improper state management and initialization handling by making focused, contextually demanding `block` instructions and index validation challenges.

(assert_invalid
  (module (func $nested-blocks-shared-stack 
    (block
      (i32.const 10)
      (block
        (block
          (br_table 1 0)
        )
        (i32.const 20)
      )
      (i32.const 30)
    )
  ))
  "type mismatch"
)